Error url google

--- a/uf1304Form/ejercicios/ejercicio1.html
+++ b/uf1304Form/ejercicios/ejercicio1.html
@@ -11,7 +11,7 @@
 </html>
 <!-- 
 Crea un formulario con un único campo de tipo text
-El action del formulario debe ser a la url "https://www.google.es"
+El action del formulario debe ser a la url "https://www.google.es/search"
 El método debe ser por GET
 La variable que se envia al hacer submit debe tener el nombre "q"
  -->
